objects/Web_Program_Access_MTM__c.object
<CustomObject>
    <description>This will link web programs to membership programs with many-to-many relationships allowed</description>
    <fields>
        <fullName>Adv_com_Program_ID__c</fullName>
        <formula>Web_Program__r.Site_Program_ID__c</formula>
        <label>Site Program ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advisory_com_CS_Role__c</fullName>
        <formula>Web_Program__r.Advisory_com_CS_Role__c</formula>
        <label>Site CS Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Program__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Membership Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Web Program Access</relationshipLabel>
        <relationshipName>Web_Program_Access_MTM</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Abbreviation__c</fullName>
        <formula>Membership_Program__r.Program_Abbreviation__c</formula>
        <label>Program Abbreviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Acronym__c</fullName>
        <formula>Membership_Program__r.Program_Acronym__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Acronym</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Formal_Name__c</fullName>
        <formula>Membership_Program__r.Program_Formal_Name__c</formula>
        <label>Program Formal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Program__c</fullName>
        <label>Web Program</label>
        <referenceTo>Web_Program_Access__c</referenceTo>
        <relationshipLabel>Associated Member Program</relationshipLabel>
        <relationshipName>Web_Program_Access_MTM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Web Program Access MTM</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Program Access MTM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>